<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/shadow"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:padding="8dp"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:padding="8dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"
            android:hint="@string/your_name"
            android:textColorHint="#607D8B"/>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="12sp"
            android:textColor="#000000"/>

    </LinearLayout>


</LinearLayout>