<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:elevation="3dp"
        android:background="@drawable/shadow" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:elevation="3dp"
        android:background="@drawable/shadow"
        android:layout_centerHorizontal="true"
        android:translationY="200dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button1"
        android:translationX="10dp"
        android:dropDownWidth="wrap_content"
        android:translationY="200dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:elevation="3dp"
        android:background="@drawable/shadow"
        android:layout_centerHorizontal="true"
        android:translationY="300dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button2"
        android:translationX="10dp"
        android:dropDownWidth="wrap_content"
        android:translationY="300dp"/>

</RelativeLayout>