<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context = ".EasyActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/easy"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:background="@drawable/shadow"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_above="@+id/linear2">
        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_above="@id/linear3">
        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_centerVertical="true">
        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:textSize="16sp"
            android:padding="8dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:textStyle="italic|bold"
        android:textSize="25sp"
        android:translationY="45dp"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear3"
        android:translationY="120dp"
        android:layout_marginLeft="55dp"
        android:text="@string/new_game"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear3"
        android:translationY="120dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="55dp"
        android:text="@string/quit"/>



</RelativeLayout>